@@ -58,280 +58,6 @@ int bus_kernel_parse_unique_name(const char *s, uint64_t *id) {
         return 1;
 }
 
-static void append_payload_vec(struct kdbus_item **d, const void *p, size_t sz) {
-        assert(d);
-        assert(sz > 0);
-
-        *d = ALIGN8_PTR(*d);
-
-        /* Note that p can be NULL, which encodes a region full of
-         * zeroes, which is useful to optimize certain padding
-         * conditions */
-
-        (*d)->size = offsetof(struct kdbus_item, vec) + sizeof(struct kdbus_vec);
-        (*d)->type = KDBUS_ITEM_PAYLOAD_VEC;
-        (*d)->vec.address = PTR_TO_UINT64(p);
-        (*d)->vec.size = sz;
-
-        *d = (struct kdbus_item *) ((uint8_t*) *d + (*d)->size);
-}
-
-static void append_payload_memfd(struct kdbus_item **d, int memfd, size_t sz) {
-        assert(d);
-        assert(memfd >= 0);
-        assert(sz > 0);
-
-        *d = ALIGN8_PTR(*d);
-        (*d)->size = offsetof(struct kdbus_item, memfd) + sizeof(struct kdbus_memfd);
-        (*d)->type = KDBUS_ITEM_PAYLOAD_MEMFD;
-        (*d)->memfd.fd = memfd;
-        (*d)->memfd.size = sz;
-
-        *d = (struct kdbus_item *) ((uint8_t*) *d + (*d)->size);
-}
-
-static void append_destination(struct kdbus_item **d, const char *s, size_t length) {
-        assert(d);
-        assert(s);
-
-        *d = ALIGN8_PTR(*d);
-
-        (*d)->size = offsetof(struct kdbus_item, str) + length + 1;
-        (*d)->type = KDBUS_ITEM_DST_NAME;
-        memcpy((*d)->str, s, length + 1);
-
-        *d = (struct kdbus_item *) ((uint8_t*) *d + (*d)->size);
-}
-
-static struct kdbus_bloom_filter *append_bloom(struct kdbus_item **d, size_t length) {
-        struct kdbus_item *i;
-
-        assert(d);
-
-        i = ALIGN8_PTR(*d);
-
-        i->size = offsetof(struct kdbus_item, bloom_filter) +
-                  offsetof(struct kdbus_bloom_filter, data) +
-                  length;
-        i->type = KDBUS_ITEM_BLOOM_FILTER;
-
-        *d = (struct kdbus_item *) ((uint8_t*) i + i->size);
-
-        return &i->bloom_filter;
-}
-
-static void append_fds(struct kdbus_item **d, const int fds[], unsigned n_fds) {
-        assert(d);
-        assert(fds);
-        assert(n_fds > 0);
-
-        *d = ALIGN8_PTR(*d);
-        (*d)->size = offsetof(struct kdbus_item, fds) + sizeof(int) * n_fds;
-        (*d)->type = KDBUS_ITEM_FDS;
-        memcpy((*d)->fds, fds, sizeof(int) * n_fds);
-
-        *d = (struct kdbus_item *) ((uint8_t*) *d + (*d)->size);
-}
-
-static int bus_message_setup_bloom(sd_bus_message *m, struct kdbus_bloom_filter *bloom) {
-        void *data;
-        unsigned i;
-        int r;
-
-        assert(m);
-        assert(bloom);
-
-        data = bloom->data;
-        memzero(data, m->bus->bloom_size);
-        bloom->generation = 0;
-
-        bloom_add_pair(data, m->bus->bloom_size, m->bus->bloom_n_hash, "message-type", bus_message_type_to_string(m->header->type));
-
-        if (m->interface)
-                bloom_add_pair(data, m->bus->bloom_size, m->bus->bloom_n_hash, "interface", m->interface);
-        if (m->member)
-                bloom_add_pair(data, m->bus->bloom_size, m->bus->bloom_n_hash, "member", m->member);
-        if (m->path) {
-                bloom_add_pair(data, m->bus->bloom_size, m->bus->bloom_n_hash, "path", m->path);
-                bloom_add_pair(data, m->bus->bloom_size, m->bus->bloom_n_hash, "path-slash-prefix", m->path);
-                bloom_add_prefixes(data, m->bus->bloom_size, m->bus->bloom_n_hash, "path-slash-prefix", m->path, '/');
-        }
-
-        r = sd_bus_message_rewind(m, true);
-        if (r < 0)
-                return r;
-
-        for (i = 0; i < 64; i++) {
-                char type;
-                const char *t;
-                char buf[sizeof("arg")-1 + 2 + sizeof("-slash-prefix")];
-                char *e;
-
-                r = sd_bus_message_peek_type(m, &type, NULL);
-                if (r < 0)
-                        return r;
-
-                if (type != SD_BUS_TYPE_STRING &&
-                    type != SD_BUS_TYPE_OBJECT_PATH &&
-                    type != SD_BUS_TYPE_SIGNATURE)
-                        break;
-
-                r = sd_bus_message_read_basic(m, type, &t);
-                if (r < 0)
-                        return r;
-
-                e = stpcpy(buf, "arg");
-                if (i < 10)
-                        *(e++) = '0' + (char) i;
-                else {
-                        *(e++) = '0' + (char) (i / 10);
-                        *(e++) = '0' + (char) (i % 10);
-                }
-
-                *e = 0;
-                bloom_add_pair(data, m->bus->bloom_size, m->bus->bloom_n_hash, buf, t);
-
-                strcpy(e, "-dot-prefix");
-                bloom_add_prefixes(data, m->bus->bloom_size, m->bus->bloom_n_hash, buf, t, '.');
-                strcpy(e, "-slash-prefix");
-                bloom_add_prefixes(data, m->bus->bloom_size, m->bus->bloom_n_hash, buf, t, '/');
-        }
-
-        return 0;
-}
-
-static int bus_message_setup_kmsg(sd_bus *b, sd_bus_message *m) {
-        struct bus_body_part *part;
-        struct kdbus_item *d;
-        bool well_known;
-        uint64_t unique;
-        size_t sz, dl;
-        unsigned i;
-        int r;
-
-        assert(b);
-        assert(m);
-        assert(m->sealed);
-
-        /* We put this together only once, if this message is reused
-         * we reuse the earlier-built version */
-        if (m->kdbus)
-                return 0;
-
-        if (m->destination) {
-                r = bus_kernel_parse_unique_name(m->destination, &unique);
-                if (r < 0)
-                        return r;
-
-                well_known = r == 0;
-        } else
-                well_known = false;
-
-        sz = offsetof(struct kdbus_msg, items);
-
-        assert_cc(ALIGN8(offsetof(struct kdbus_item, vec) + sizeof(struct kdbus_vec)) ==
-                  ALIGN8(offsetof(struct kdbus_item, memfd) + sizeof(struct kdbus_memfd)));
-
-        /* Add in fixed header, fields header and payload */
-        sz += (1 + m->n_body_parts) *
-                ALIGN8(offsetof(struct kdbus_item, vec) + sizeof(struct kdbus_vec));
-
-        /* Add space for bloom filter */
-        sz += ALIGN8(offsetof(struct kdbus_item, bloom_filter) +
-                     offsetof(struct kdbus_bloom_filter, data) +
-                     m->bus->bloom_size);
-
-        /* Add in well-known destination header */
-        if (well_known) {
-                dl = strlen(m->destination);
-                sz += ALIGN8(offsetof(struct kdbus_item, str) + dl + 1);
-        }
-
-        /* Add space for unix fds */
-        if (m->n_fds > 0)
-                sz += ALIGN8(offsetof(struct kdbus_item, fds) + sizeof(int)*m->n_fds);
-
-        m->kdbus = memalign(8, sz);
-        if (!m->kdbus) {
-                r = -ENOMEM;
-                goto fail;
-        }
-
-        m->free_kdbus = true;
-        memzero(m->kdbus, sz);
-
-        m->kdbus->flags =
-                ((m->header->flags & BUS_MESSAGE_NO_REPLY_EXPECTED) ? 0 : KDBUS_MSG_FLAGS_EXPECT_REPLY) |
-                ((m->header->flags & BUS_MESSAGE_NO_AUTO_START) ? KDBUS_MSG_FLAGS_NO_AUTO_START : 0);
-        m->kdbus->dst_id =
-                well_known ? 0 :
-                m->destination ? unique : KDBUS_DST_ID_BROADCAST;
-        m->kdbus->payload_type = KDBUS_PAYLOAD_DBUS;
-        m->kdbus->cookie = (uint64_t) m->header->serial;
-        m->kdbus->priority = m->priority;
-
-        if (m->header->flags & BUS_MESSAGE_NO_REPLY_EXPECTED)
-                m->kdbus->cookie_reply = m->reply_cookie;
-        else
-                m->kdbus->timeout_ns = m->timeout * NSEC_PER_USEC;
-
-        d = m->kdbus->items;
-
-        if (well_known)
-                append_destination(&d, m->destination, dl);
-
-        append_payload_vec(&d, m->header, BUS_MESSAGE_BODY_BEGIN(m));
-
-        MESSAGE_FOREACH_PART(part, i, m) {
-                if (part->is_zero) {
-                        /* If this is padding then simply send a
-                         * vector with a NULL data pointer which the
-                         * kernel will just pass through. This is the
-                         * most efficient way to encode zeroes */
-
-                        append_payload_vec(&d, NULL, part->size);
-                        continue;
-                }
-
-                if (part->memfd >= 0 && part->sealed && m->destination) {
-                        /* Try to send a memfd, if the part is
-                         * sealed and this is not a broadcast. Since we can only  */
-
-                        append_payload_memfd(&d, part->memfd, part->size);
-                        continue;
-                }
-
-                /* Otherwise, let's send a vector to the actual data.
-                 * For that, we need to map it first. */
-                r = bus_body_part_map(part);
-                if (r < 0)
-                        goto fail;
-
-                append_payload_vec(&d, part->data, part->size);
-        }
-
-        if (m->kdbus->dst_id == KDBUS_DST_ID_BROADCAST) {
-                struct kdbus_bloom_filter *bloom;
-
-                bloom = append_bloom(&d, m->bus->bloom_size);
-                r = bus_message_setup_bloom(m, bloom);
-                if (r < 0)
-                        goto fail;
-        }
-
-        if (m->n_fds > 0)
-                append_fds(&d, m->fds, m->n_fds);
-
-        m->kdbus->size = (uint8_t*) d - (uint8_t*) m->kdbus;
-        assert(m->kdbus->size <= sz);
-
-        return 0;
-
-fail:
-        m->poisoned = true;
-        return r;
-}
-
 static int bus_kernel_make_message(sd_bus *bus, struct kdbus_msg *k) {
         sd_bus_message *m = NULL;
         struct kdbus_item *d;
@@ -659,104 +385,6 @@ static void close_kdbus_msg(sd_bus *bus, struct kdbus_msg *k) {
                 else if (d->type == KDBUS_ITEM_PAYLOAD_MEMFD)
                         safe_close(d->memfd.fd);
         }
-}
-
-int bus_kernel_write_message(sd_bus *bus, sd_bus_message *m, bool hint_sync_call) {
-        int r;
-
-        assert(bus);
-        assert(m);
-        assert(bus->state == BUS_RUNNING);
-
-        /* If we can't deliver, we want room for the error message */
-        r = bus_rqueue_make_room(bus);
-        if (r < 0)
-                return r;
-
-        r = bus_message_setup_kmsg(bus, m);
-        if (r < 0)
-                return r;
-
-        /* If this is a synchronous method call, then let's tell the
-         * kernel, so that it can pass CPU time/scheduling to the
-         * destination for the time, if it wants to. If we
-         * synchronously wait for the result anyway, we won't need CPU
-         * anyway. */
-        if (hint_sync_call)
-                m->kdbus->flags |= KDBUS_MSG_FLAGS_EXPECT_REPLY|KDBUS_MSG_FLAGS_SYNC_REPLY;
-
-        r = ioctl(bus->output_fd, KDBUS_CMD_MSG_SEND, m->kdbus);
-        if (r < 0) {
-                _cleanup_bus_error_free_ sd_bus_error error = SD_BUS_ERROR_NULL;
-                sd_bus_message *reply;
-
-                if (errno == EAGAIN || errno == EINTR)
-                        return 0;
-                else if (errno == ENXIO || errno == ESRCH) {
-
-                        /* ENXIO: unique name not known
-                         * ESRCH: well-known name not known */
-
-                        if (m->header->type == SD_BUS_MESSAGE_METHOD_CALL)
-                                sd_bus_error_setf(&error, SD_BUS_ERROR_SERVICE_UNKNOWN, "Destination %s not known", m->destination);
-                        else {
-                                log_debug("Could not deliver message to %s as destination is not known. Ignoring.", m->destination);
-                                return 0;
-                        }
-
-                } else if (errno == EADDRNOTAVAIL) {
-
-                        /* EADDRNOTAVAIL: activation is possible, but turned off in request flags */
-
-                        if (m->header->type == SD_BUS_MESSAGE_METHOD_CALL)
-                                sd_bus_error_setf(&error, SD_BUS_ERROR_SERVICE_UNKNOWN, "Activation of %s not requested", m->destination);
-                        else {
-                                log_debug("Could not deliver message to %s as destination is not activated. Ignoring.", m->destination);
-                                return 0;
-                        }
-                } else
-                        return -errno;
-
-                r = bus_message_new_synthetic_error(
-                                bus,
-                                BUS_MESSAGE_COOKIE(m),
-                                &error,
-                                &reply);
-
-                if (r < 0)
-                        return r;
-
-                r = bus_seal_synthetic_message(bus, reply);
-                if (r < 0)
-                        return r;
-
-                bus->rqueue[bus->rqueue_size++] = reply;
-
-        } else if (hint_sync_call) {
-                struct kdbus_msg *k;
-
-                k = (struct kdbus_msg *)((uint8_t *)bus->kdbus_buffer + m->kdbus->offset_reply);
-                assert(k);
-
-                if (k->payload_type == KDBUS_PAYLOAD_DBUS) {
-
-                        r = bus_kernel_make_message(bus, k);
-                        if (r < 0) {
-                                close_kdbus_msg(bus, k);
-
-                                /* Anybody can send us invalid messages, let's just drop them. */
-                                if (r == -EBADMSG || r == -EPROTOTYPE)
-                                        log_debug("Ignoring invalid message: %s", strerror(-r));
-                                else
-                                        return r;
-                        }
-                } else {
-                        log_debug("Ignoring message with unknown payload type %llu.", (unsigned long long) k->payload_type);
-                        close_kdbus_msg(bus, k);
-                }
-        }
-
-        return 1;
 }
 
 static int push_name_owner_changed(sd_bus *bus, const char *name, const char *old_owner, const char *new_owner) {
